@@ -1,3 +1,10 @@
+2008-03-10  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* tests/test-pokeravatar.py.in
+	(PokerAvatarTestCase.variousPacketsWithStringOrSinglePacketReturn):
+	Wrote function.
+	(PokerAvatarTestCase.test52_variousPackets): Wrote function.
+
 2008-03-09  Bradley M. Kuhn  <bkuhn@ebb.org>
 
 	* tests/test-pokeravatar.py.in
